--- a/libft/Makefile
+++ b/libft/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
 sources = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
-		  ft_strlen.c ft_memset.c
+		  ft_strlen.c ft_memset.c ft_bzero.c
 objects = $(sources:.c=.o)
 NAME = libft.a
 
