--- a/libft/Makefile
+++ b/libft/Makefile
@@ -5,7 +5,7 @@ sources = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
 		  ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c \
 		  ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c \
 		  ft_strncmp.c \
-		  ft_atoi.c
+		  ft_strnstr.c ft_atoi.c
 objects = $(sources:.c=.o)
 NAME = libft.a
 
