--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@ sources = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
 		  ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
 		  ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c  ft_strnstr.c \
 		  ft_atoi.c ft_calloc.c ft_strdup.c \
-		  ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c
+		  ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c
 objects = $(sources:.c=.o)
 NAME = libft.a
 
@@ -29,5 +29,5 @@ fclean : clean
 clean :
 	rm -f $(objects)
 
-debug : ft_split.c ft_calloc.c ft_memset.c ft_substr.c ft_strlen.c
+debug : ft_itoa.c
 	$(CC) $(CFLAGS) -g $^ -o debug
