refactor(gnl): redirect sources to src directory

--- a/get_next_line/CMakeLists.txt
+++ b/get_next_line/CMakeLists.txt
@@ -4,6 +4,6 @@ set(CMAKE_C_STANDARD 99)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -D BUFFER_SIZE=42")
 
-set(SOURCES get_next_line.c get_next_line_utils.c get_next_line.h)
+set(SOURCES src/get_next_line.c src/get_next_line_utils.c src/get_next_line.h)
 
 add_library(get_next_line ${SOURCES})
