refactor(libft): define AR and ARFLAGS variables in Makefile

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,12 +6,14 @@
 #    By: euihlee <euihlee@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/26 21:32:38 by euihlee           #+#    #+#              #
-#    Updated: 2022/12/07 17:34:33 by euihlee          ###   ########.fr        #
+#    Updated: 2022/12/22 13:39:39 by euihlee          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
+AR = ar
+ARFLAGS = -rcs
 
 NAME = libft.a
 
@@ -44,7 +46,7 @@ endif
 all : $(NAME)
 
 $(NAME) : $(objects)
-	ar -r $@ $^
+	$(AR) $(ARFLAGS) $@ $^
 
 .PHONY : bonus
 bonus :
