--- a/libft/src/Makefile
+++ b/libft/src/Makefile
@@ -6,7 +6,7 @@
 #    By: euihlee <euihlee@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/26 21:32:38 by euihlee           #+#    #+#              #
-#    Updated: 2022/12/22 13:39:39 by euihlee          ###   ########.fr        #
+#    Updated: 2023/02/07 16:52:56 by euihlee          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,9 @@ ft_atoi.c       ft_calloc.c     ft_strdup.c \
 \
 ft_substr.c     ft_strjoin.c    ft_strtrim.c    ft_split.c \
 ft_itoa.c       ft_strmapi.c    ft_striteri.c   ft_putchar_fd.c \
-ft_putstr_fd.c  ft_putendl_fd.c ft_putnbr_fd.c
+ft_putstr_fd.c  ft_putendl_fd.c ft_putnbr_fd.c \
+\
+ft_isdecimal.c
 
 bonuses = \
 ft_lstnew.c         ft_lstadd_front.c   ft_lstsize.c    ft_lstlast.c \
